# rs-emoji-list

./: Cargo.toml  README.md  example.sh  opt.sh  rs-emoji-list.wasm
src/: lib.rs  main.rs
