[package]
name = "rs-emoji-list"
version = "0.1.0"
edition = "2024"

description = "Prints the known emoji info."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-emoji-list"
homepage = "https://github.com/takanoriyanagitani/rs-emoji-list"
documentation = "https://docs.rs/rs-emoji-list/latest"
keywords = ["emoji", "list", "wasi"]

exclude = [
    "rs-emoji-list.wasm",
    "opt.wasm",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.clap]
version = "4"
default-features = false
features = [
    "std",
    "derive",
    "help",
    "usage",
]

[dependencies.serde]
version = "1"
default-features = false
features = [
    "std",
    "derive",
]

[dependencies.serde_json]
version = "1"
default-features = false
features = [
    "std",
]

[dependencies.emojis]
version = "0.8"
default-features = false
features = [
]
